# prompt-goblin

./: .gitignore  AGENT.md  README.md  index.html  overlay.html  package.json
.github/workflows/: ci.yml  release.yml
backlog/: README.md  backlog.md  product-strategy-roadmap.md  quality-assessment.md  release-sequence.md  security-assessment.md
backlog/epics/: README.md  epic-01-typing-reliability-and-fallback-delivery.md  epic-02-trust-layer-v1.md  epic-03-recording-controls-and-session-handling.md  epic-04-privacy-and-release-basics.md  epic-05-per-app-behavior.md  epic-06-post-processing-profiles.md  epic-07-personal-voice-memory-v1.md  epic-08-session-history-v1.md  epic-09-hybrid-speed-quality-pipeline.md  epic-11-context-autopilot-lite.md  (+1 more)
oauth-poc/: README.md  index.mjs
public/: site.webmanifest
src/: app.ts  gemini.ts  incremental-typing.ts  live-audio-session.ts  logger.ts  main.ts  overlay-styles.css  overlay.ts  proxy-fetch.ts  settings.ts  string-utils.ts  styles.css  text-commands.ts  waveform-styles.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: audio.rs  debug_log.rs  http_proxy.rs  keyboard.rs  lib.rs
tests/: api-key-controller.test.ts  correction-service.test.ts  event-bindings.test.ts  gemini.e2e.test.ts  gemini.integration.test.ts  gemini.test.ts  incremental-typing.test.ts  main-dom.test.ts  main-model-cache.test.ts  main-model-loader.test.ts  main-settings-controller.test.ts  main-utils.test.ts  openai-provider.test.ts  openai.e2e.test.ts  openai.integration.test.ts  string-utils.test.ts  text-commands.test.ts
(+26 files in other folders)
