[package]
name = "prompt-goblin"
version = "0.1.0"
description = "Voice-to-text desktop app powered by Gemini"
authors = ["Sergej Popov"]
edition = "2021"

[lib]
name = "prompt_goblin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
base64 = "0.22"
time = { version = "0.3", features = ["formatting", "local-offset"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
